# SAVT

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.template.json  EXECUTION_PLAN.md  README.md  icepanel-landscape-import.yaml
apps/desktop/: CMakeLists.txt
apps/desktop/assets/: app_icon.qrc
apps/desktop/qml/: Main.qml
apps/desktop/qml/common/: AppButton.qml  AppCard.qml  AppChip.qml  AppEmptyState.qml  AppSection.qml  SearchField.qml  SegmentedControl.qml  StatusBadge.qml
apps/desktop/qml/components/: AppButton.qml  AppTheme.qml  L2GraphView.qml  L2GraphView.qmlc  L3ComponentView.qml  RightInspector.qml  RightInspector.qmlc  SurfaceCard.qml  TagChip.qml  TopControlBar.qml
apps/desktop/qml/graph/: CapabilityGraphCanvas.qml  CapabilityNodeItem.qml  ComponentGraphCanvas.qml  ComponentNodeItem.qml  GraphEdgeCanvas.qml  GraphLegend.qml  GraphViewport.qml
apps/desktop/qml/greenfield/: MainSurface.qml
apps/desktop/qml/logic/: GraphSelection.js  InspectorFormatter.js
apps/desktop/qml/pages/: CapabilityMapPage.qml  ComparePage.qml  ComponentWorkbenchPage.qml  ProjectOverviewPage.qml  ReportPage.qml  ViewLevelPage.qml
apps/desktop/qml/report/: PromptPackSection.qml  ReportActionsSection.qml  ReportCapabilitySection.qml  ReportEvidenceSection.qml  ReportSummarySection.qml
apps/desktop/qml/shell/: AppShell.qml  AppTopBar.qml  AskSavtWindow.qml  BreadcrumbBar.qml  SideNavTree.qml  WorkspaceHeader.qml
apps/desktop/qml/state/: CompareState.qml  DesktopUiState.qml  InspectorState.qml  NavigationState.qml  SelectionState.qml
apps/desktop/qml/theme/: AppTheme.qml  DesignTokens.qml
apps/desktop/qml/workspace/: AskSavtPanel.qml  BottomContextTray.qml  ComponentToolbar.qml  ContextActionStrip.qml  FileInsightView.qml  InspectorDetailsDrawer.qml  InspectorPanel.qml  InspectorSummaryCard.qml  MapToolbar.qml
apps/desktop/src/: MarkdownRenderer.cpp  MarkdownRenderer.h  main.cpp
src/ai/: CMakeLists.txt
src/ai/src/: DeepSeekBuildConfig.h.in  DeepSeekClient.cpp
src/analyzer/: CMakeLists.txt
src/analyzer/src/: AnalysisGraphBuilder.cpp  AnalysisGraphBuilder.h  AnalyzerUtilities.cpp  AnalyzerUtilities.h  CppProjectAnalyzer.cpp  SemanticProjectAnalyzer.cpp  SemanticProjectAnalyzer.h  SyntaxProjectAnalyzer.cpp  SyntaxProjectAnalyzer.h
src/core/: CMakeLists.txt
src/core/src/: ArchitectureAggregation.cpp  ArchitectureGraph.cpp  ArchitectureOverview.cpp  ArchitectureRuleEngine.cpp  CapabilityGraph.cpp  ComponentGraph.cpp  ProjectAnalysisConfig.cpp  SyntaxTree.cpp
src/layout/: CMakeLists.txt  README.md
src/layout/src/: LayeredGraphLayout.cpp
src/parser/: CMakeLists.txt
src/parser/src/: TreeSitterCppParser.cpp
src/reconstruction/: CMakeLists.txt
src/reconstruction/src/: ArchitectureReconstruction.cpp
src/ui/: CMakeLists.txt
src/ui/src/: AiService.cpp  AnalysisAnnotationService.cpp  AnalysisController.cpp  AnalysisOrchestrator.cpp  AnalysisTextFormatter.cpp  AstPreviewService.cpp  FileInsightService.cpp  IncrementalAnalysisPipeline.cpp  ProjectConfigRecommendationService.cpp  ReadingGuideService.cpp  ReportService.cpp  SceneMapper.cpp  SemanticReadinessService.cpp  WorkspaceProjectionBuilder.cpp  moc_AnalysisController.cpp
tests/: CMakeLists.txt  README.md
tests/cpp/: ai_backend_tests.cpp  c4_backend_tests.cpp  component_scene_probe.cpp  perf_baseline.cpp  snapshot_tests.cpp  ui_service_tests.cpp
tests/fixtures/precision/: CATALOG.md
tests/fixtures/precision/cpp_semantic_cross_tu/: base.cpp  derived.cpp  model.h
tests/fixtures/precision/js_backend/: package.json
tests/fixtures/precision/js_express_inventory/: package.json
tests/fixtures/precision/js_worker_pipeline/: package.json
tests/fixtures/precision/semantic_preferred_llvm_not_found/: main.cpp
tests/fixtures/precision/semantic_required_missing_compile_commands/: main.cpp
tests/fixtures/precision/semantic_required_system_headers_unresolved/: main.cpp
tests/fixtures/precision/spring_boot_inventory/: pom.xml
tests/fixtures/precision/spring_boot_java/: pom.xml
tests/golden/precision/cpp_batch_tooling/: analysis_report.dot  analysis_report.json  analysis_report.md  capability.txt  layout.txt  overview.txt  precision_summary.txt  system_context.md
tests/golden/precision/cpp_header_only_lib/: analysis_report.dot  analysis_report.json  analysis_report.md  capability.txt  capability_scene_layout.txt  layout.txt  overview.txt  precision_summary.txt  system_context.md
tests/golden/precision/cpp_layered_pipeline/: analysis_report.dot  analysis_report.json  analysis_report.md  capability.txt  capability_scene_layout.txt  layout.txt  overview.txt  precision_summary.txt  system_context.md
tests/golden/precision/cpp_plugin_host/: analysis_report.dot  analysis_report.json  analysis_report.md  capability.txt  capability_scene_layout.txt  layout.txt  overview.txt  system_context.md
tests/golden/precision/cpp_semantic_cross_tu/: analysis_report.dot  analysis_report.json  analysis_report.md  capability.txt  capability_scene_layout.txt  overview.txt  precision_summary.txt
tests/golden/precision/cpp_syntax_only/: analysis_report.dot  analysis_report.json  analysis_report.md  capability.txt  capability_scene_layout.txt  layout.txt  overview.txt  precision_summary.txt  system_context.md
tests/golden/precision/cpp_vendored_dependency_app/: analysis_report.dot  analysis_report.json  analysis_report.md  capability.txt  layout.txt  overview.txt  precision_summary.txt  system_context.md
tests/golden/precision/js_backend/: analysis_report.dot  analysis_report.json  analysis_report.md  capability.txt  capability_scene_layout.txt  layout.txt  overview.txt  precision_summary.txt  system_context.md
tests/golden/precision/js_express_inventory/: analysis_report.dot  analysis_report.json  analysis_report.md  capability.txt  capability_scene_layout.txt  layout.txt  overview.txt  system_context.md
tests/golden/precision/js_worker_pipeline/: analysis_report.dot  analysis_report.json  analysis_report.md  capability.txt  capability_scene_layout.txt  layout.txt  overview.txt  (+2 more)
(+262 files in other folders)
